add money system added

--- a/home.html
+++ b/home.html
@@ -38,16 +38,14 @@
               <img src="images/Group.png" alt="" class="w-full" />
             </a>
             <div class="amount">
-              <h4 class="text-md font-bold">$45000</h4>
+              <h4 class="text-md font-bold">45000</h4>
               <p class="text-sm">Available Balance</p>
             </div>
           </div>
 
           <div class="avatar">
             <div class="w-8 rounded-full ring ring-offset-1 cursor-pointer">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp"
-              />
+              <img src="images/fahim.jpg" />
             </div>
           </div>
         </div>
@@ -197,6 +195,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src=""></script>
   </body>
 </html>
