--- a/addMoney.html
+++ b/addMoney.html
@@ -39,16 +39,14 @@
               <img src="images/Group.png" alt="" class="w-full" />
             </a>
             <div class="amount">
-              <h4 class="text-md font-bold">$45000</h4>
+              <h4 id="main-balance" class="text-md font-bold">45000</h4>
               <p class="text-sm">Available Balance</p>
             </div>
           </div>
 
           <div class="avatar">
             <div class="w-8 rounded-full ring ring-offset-1 cursor-pointer">
-              <img
-                src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp"
-              />
+              <img src="images/fahim.jpg" />
             </div>
           </div>
         </div>
@@ -144,8 +142,8 @@
           <form id="loginForm" class="flex flex-col items-start my-auto">
             <label for="username" class="mb-2">Account Number</label>
             <input
-              type="number"
-              id="username"
+              type="text"
+              id="add-money-number"
               name="phone-Number"
               placeholder="11 Digit Account Number"
               required
@@ -154,8 +152,8 @@
 
             <label for="amount" class="mb-2">Amount to Add</label>
             <input
-              type="number"
-              id="amount"
+              type="text"
+              id="add-money-amount"
               name="amount"
               placeholder="Add Amount"
               required
@@ -165,13 +163,14 @@
             <label for="password" class="mb-2">4 Digit Pin</label>
             <input
               type="password"
-              id="password"
+              id="add-money-pin"
               name="password"
               placeholder="Enter 4-Digit Pin"
               required
               class="w-full py-2 px-5 bg-[#F4F5F7] rounded-3xl outline-none mb-5"
             />
             <button
+              id="add-money-btn"
               type="submit"
               class="w-full bg-[#0874F2] text-white py-3 px-5 rounded-3xl outline-none"
             >
@@ -194,6 +193,6 @@
         </p>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/addMoney.js"></script>
   </body>
 </html>
